--- a/package.json
+++ b/package.json
@@ -18,15 +18,15 @@
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
     "@effect/data": "^0.12.2",
-    "@effect/io": "^0.22.1",
+    "@effect/io": "^0.22.2",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "prettier": "^2.8.7",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@effect/data": "^0.12.2",
-    "@effect/io": "^0.22.1"
+    "@effect/io": "^0.22.2"
   }
 }
