--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
   "license": "MIT",
   "devDependencies": {
     "@changesets/cli": "^2.26.1",
-    "@effect/data": "^0.12.2",
-    "@effect/io": "^0.25.0",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "prettier": "^2.8.7",
     "tsx": "^3.12.6",
     "typescript": "^5.0.4",
     "vitest": "^0.30.1"
+  },
+  "dependencies": {
+    "@effect/data": "^0.12.2",
+    "@effect/io": "^0.25.0"
   }
 }
