--- a/package.json
+++ b/package.json
@@ -2,10 +2,18 @@
   "name": "effect-log",
   "version": "0.2.6",
   "description": "",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
   "types": "dist/index.d.ts",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    }
+  },
+  "type": "module",
   "scripts": {
-    "build": "rm -rf dist && tsc -p tsconfig.build.json",
+    "build": "tsup",
     "watch": "tsc -w -p tsconfig.json",
     "format": "prettier -w src tests examples",
     "lint": "prettier src tests examples --check",
@@ -19,6 +27,7 @@
     "@changesets/cli": "^2.26.1",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "prettier": "^2.8.8",
+    "tsup": "^6.7.0",
     "tsx": "^3.12.7",
     "typescript": "^5.0.4",
     "vitest": "^0.31.3"
