--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
+    "stripInternal": true,
     "types": ["vitest/globals"],
     "paths": {
       "effect-log": [
