--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@effect/data": "^0.17.6",
     "@effect/io": "^0.38.2",
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
+    "effect": "2.0.0-next.29",
     "prettier": "^3.0.2",
     "tsup": "^7.2.0",
     "tsx": "^3.12.7",
