--- a/package.json
+++ b/package.json
@@ -40,14 +40,14 @@
   "devDependencies": {
     "@changesets/cli": "^2.27.1",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
-    "effect": "2.0.0-next.62",
+    "effect": "2.0.0",
     "prettier": "^3.1.1",
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vitest": "^1.1.0"
+    "vitest": "^1.1.1"
   },
   "peerDependencies": {
-    "effect": "2.0.0-next.62"
+    "effect": "^2.0.0"
   }
 }
