--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,27 +1,15 @@
 {
-  "compilerOptions": {
-    "target": "es2016",
-    "module": "commonjs",
-    "declaration": true,
-    "outDir": "./dist",
-    "esModuleInterop": true,
-    "forceConsistentCasingInFileNames": true,
-    "strict": true,
-    "skipLibCheck": true,
-    "stripInternal": true,
-    "types": ["vitest/globals"],
-    "paths": {
-      "effect-log": [
-        "./src/index.ts"
-      ],
-      "effect-log/*": [
-        "./src/*"
-      ]
+  "extends": "./tsconfig.base.json",
+  "include": [],
+  "references": [
+    {
+      "path": "tsconfig.src.json"
+    },
+    {
+      "path": "tsconfig.test.json"
+    },
+    {
+      "path": "tsconfig.examples.json"
     }
-  },
-  "include": [
-    "src",
-    "tests",
-    "examples"
   ]
 }
