--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "@typescript-eslint/parser": "^7.3.1",
     "@vitest/coverage-v8": "^1.4.0",
     "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "effect": "2.4.9",
+    "effect": "2.4.10",
     "eslint": "^8.57.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-codegen": "0.27.0-2",
+    "eslint-plugin-codegen": "0.27.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^12.0.0",
@@ -61,11 +61,11 @@
     "prettier": "^3.2.5",
     "rimraf": "^5.0.5",
     "tsx": "^4.7.1",
-    "typescript": "^5.4.2",
+    "typescript": "^5.4.3",
     "vite": "^5.2.2",
     "vitest": "^1.4.0"
   },
   "peerDependencies": {
-    "effect": "^2.4.9"
+    "effect": "^2.4.10"
   }
 }
