--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "bugs": {
     "url": "https://github.com/sukovanej/effect-log/issues"
   },
-  "packageManager": "pnpm@8.15.6",
+  "packageManager": "pnpm@9.0.4",
   "publishConfig": {
     "access": "public",
     "directory": "dist"
@@ -67,5 +67,12 @@
   },
   "peerDependencies": {
     "effect": "^3.0.0"
+  },
+  "pnpm": {
+    "updateConfig": {
+      "ignoreDependencies": [
+        "eslint"
+      ]
+    }
   }
 }
